src/main/metadata-excluded/objects/EP_Log_DataQuality__c.object
<CustomObject>
    <description>EP Log: Used for reporting of Data Quality of integration validation/de-duplication transactions 
Track number of records:
passed validation, failed validation, matched the rule</description>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>Data source detail</description>
        <label>Dealer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EpRunId__c</fullName>
        <description>Parent BTL ID</description>
        <label>EpRunId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <description>Data source or interface name</description>
        <label>Interface</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <description>Number of records failed validation</description>
        <label>Invalid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Matches__c</fullName>
        <description>Number of records matched the rule</description>
        <label>Matches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Remark__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Name of rule</description>
        <label>Rule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <description>Date of interface run</description>
        <label>RunDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Validation or Deduplication</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduplication</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>Number of records passed validation</description>
        <label>Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EP Log Data Quality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EpRunId__c</columns>
        <columns>Interface__c</columns>
        <columns>Type__c</columns>
        <columns>Invalid__c</columns>
        <columns>Valid__c</columns>
        <columns>Rule__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPLDQ-{0000000}</displayFormat>
        <label>EP Log Data Quality ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EP Log Data Quality</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>